--- a/visualizer/web/index.html
+++ b/visualizer/web/index.html
@@ -11,11 +11,11 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/">
+  <base href="/supabase_addons/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Flutter developers analize their apps performance with Supabase.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -23,7 +23,7 @@
   <meta name="apple-mobile-web-app-title" content="visualizer">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>visualizer</title>
+  <title>Supabase Visualizer</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
